# Maskchain

./: .bumpversion.cfg  .clang-format  .dockerignore  .editorconfig  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  README.md  README_former.md  appveyor.yml  circle.yml  codecov.yml  snapcraft.yaml
aleth/: AccountManager.cpp  CMakeLists.txt  MinerAux.h  main.cpp
aleth-key/: CMakeLists.txt  KeyAux.h  main.cpp
aleth-vm/: CMakeLists.txt  main.cpp
cmake/: EthCcache.cmake  EthCheckCXXCompilerFlag.cmake  EthCompilerSettings.cmake  EthDependencies.cmake  EthExecutableHelper.cmake  EthOptions.cmake  EthUtils.cmake  FindLevelDB.cmake  ProjectLibFF.cmake  ProjectLibFqfft.cmake  ProjectLibSnark.cmake  ProjectMPIR.cmake  ProjectSecp256k1.cmake  UseMiniupnpc.cmake
doc/: Doxyfile  database_layout.rst  dependencies.rst  generating_tests.rst  index.rst  snapshot_sync.rst  usingtesteth.rst
evmc/: .bumpversion.cfg  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  circle.yml
evmjit/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circle.yml
hera/: .gitignore  .gitmodules  CMakeLists.txt  README.md  circle.yml  codecov.yml
libaleth-interpreter/: CMakeLists.txt  VM.cpp  VM.h  VMCalls.cpp  VMConfig.h  VMOpt.cpp  interpreter.h
libdevcore/: Address.cpp  Address.h  Assertions.h  Base64.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  CommonJS.h  DBImpl.h  Exceptions.h  FileSystem.cpp  FileSystem.h  FixedHash.cpp  FixedHash.h  Guards.h  JsonUtils.cpp  JsonUtils.h  LevelDB.cpp  LevelDB.h  Log.cpp  Log.h  LoggingProgramOptions.cpp  LoggingProgramOptions.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  RLP.cpp  RLP.h  RangeMask.h  SHA3.cpp  SHA3.h  Terminal.h  TransientDirectory.cpp  TrieCommon.cpp  TrieCommon.h  (+9 more)
libdevcrypto/: AES.cpp  CMakeLists.txt  Common.cpp  Common.h  CryptoPP.cpp  CryptoPP.h  Hash.cpp  Hash.h  LibSnark.cpp  LibSnark.h  SecretStore.cpp  SecretStore.h
libethashseal/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashCPUMiner.cpp  EthashCPUMiner.h  EthashClient.cpp  EthashClient.h  EthashProofOfWork.cpp  EthashProofOfWork.h  GenesisInfo.cpp  GenesisInfo.h
libethcore/: BasicAuthority.cpp  BasicAuthority.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  EVMSchedule.h  Exceptions.h  KeyManager.cpp  KeyManager.h  LogEntry.cpp  LogEntry.h  Precompiled.cpp  Precompiled.h  SealEngine.cpp  SealEngine.h  TransactionBase.cpp  TransactionBase.h
libethereum/: Account.cpp  Account.h  BasicGasPricer.cpp  BasicGasPricer.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainImporter.cpp  BlockChainImporter.h  BlockChainSync.cpp  BlockChainSync.h  BlockDetails.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  CommonNet.h  Defaults.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  GenericFarm.h  GenericMiner.h  GenesisInfo.cpp  GenesisInfo.h  ImportPerformanceLogger.cpp  ImportPerformanceLogger.h  (+24 more)
libevm/: CMakeLists.txt  EVMC.cpp  EVMC.h  ExtVMFace.cpp  ExtVMFace.h  Instruction.cpp  Instruction.h  LegacyVM.cpp  LegacyVM.h  LegacyVMCalls.cpp  LegacyVMConfig.h  LegacyVMOpt.cpp  VMFace.h  VMFactory.cpp  VMFactory.h
libmsksnark/: CMakeLists.txt  interface  interface.cpp  interface.h
libp2p/: CMakeLists.txt  Capability.cpp  Capability.h  Common.cpp  Common.h  Host.cpp  Host.h  HostCapability.h  Network.cpp  Network.h  NodeTable.cpp  NodeTable.h  Peer.cpp  Peer.h  RLPXFrameCoder.cpp  RLPXFrameCoder.h  RLPxHandshake.cpp  RLPxHandshake.h  Session.cpp  Session.h  UDP.cpp  UDP.h  UPnP.cpp
libsnark/: CMakeLists.txt  Makefile  README.md  ____________  again.cpp  sum_prove_0.txt_  sum_prove_1.txt_  sum_prove_2.txt_  systemIPList.txt
libsnark/donator2/: CMakeLists.txt  Makefile  basic.cpp  cgauss.cpp  donator2  entrence.cpp  fuckaround.cpp  interface.cpp  interface.h  interface.hpp  prac  pz.cpp  rsa_private_key.pem  rsa_public_key.pem  ser_pk_jimmyshi.data  ser_proof_interface.data  ser_proof_old.data  ser_vk_hash.data  ser_vk_interface.data  ser_vk_jimmyshi.data  ser_vk_old.data  try  vk.data  vk_reward.data
libsnark/donator2/libsnark/common/data_structures/: merkle_tree.hpp
libsnark/donee/: Makefile  donee  main.cpp  main_add2.cpp  main_exp (______).cpp  main_simple_multi.cpp  ser_pk_jimmyshi.data  ser_pk_jimmyshi2.data  ser_proof.data  ser_vk_old.data  vk.data
libsnark/libff/src/: CMakeLists.txt
libsnark/libfqfft/src/: CMakeLists.old.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libsnark/libsnark-n1/gadgetlib1/tests/: gadgetlib1_test.cpp
libsnark/libsnark/src/: CMakeLists.txt
libsnark/miner/: Makefile  main 12.21.cpp  main.cpp  main1.cpp  main12.25 (______).cpp  main2.cpp  main_add.cpp  main_bigint.cpp  miner  ser_proof_old.data
libsnark/miner_f/: IPList.txt  Makefile  main.cpp  main_exp.cpp  main_exp11.cpp  main_hash.cpp  main_merkletree.cpp  miner_f  ser_vk.data  ser_vk_jimmyshi2.data
libsnark/platform/: IPList.txt  Makefile  main.cpp  main12.24.cpp  main12.24_18_09.cpp  platform  ser_vk_jimmyshi.data
libsnark/standard/: Makefile  main.cpp  simple_example.hpp
libsnark/zcash_w/src/snark/src/gadgetlib1/gadgets/hashes/sha256/tests/: generate_sha256_gadget_tests.py
libweb3jsonrpc/: AccountHolder.cpp  AccountHolder.h  AdminEth.cpp  AdminNet.cpp  AdminNet.h  AdminNetFace.h  CMakeLists.txt  Debug.cpp  Debug.h  DebugFace.h  Eth.cpp  Eth.h  EthFace.h  IpcServer.h  IpcServerBase.cpp  IpcServerBase.h  JsonHelper.cpp  JsonHelper.h  ModularServer.h  Personal.cpp  Test.cpp  Test.h  TestFace.h  UnixSocketServer.cpp  UnixSocketServer.h  Web3.h  WinPipeServer.cpp  WinPipeServer.h  debug.json  eth.json  test.json
libwebthree/: CMakeLists.txt  WebThree.cpp  WebThree.h
rlp/: CMakeLists.txt  main.cpp
scripts/: Dockerfile  (+17 more)
(+16806 files in other folders)
